fixed horizontal scroll on showcase img

--- a/css/styles.css
+++ b/css/styles.css
@@ -752,12 +752,11 @@ a {
     grid-template-columns: 50% 50%;
   }
   .block-showcase__image {
-    width: auto;
+    width: 100%;
     max-width: 700px;
     justify-self: end;
   }
   .block-showcase__image > img {
-    width: auto;
     max-width: 700px;
   }
 }
